<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    android:layout_marginLeft="10dp"
    android:layout_marginTop="10dp"
    android:id="@+id/song_item">

    <ImageView
        android:id="@+id/categoryIcon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:src="@drawable/runningnote" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            android:id="@+id/songName"
            style="@style/songNameInfo"
            tools:text="@string/song_name"/>

        <TextView
            android:id="@+id/songArtist"
            style="@style/songOthersInfo"
            tools:text="@string/artist"/>


        <TextView
            android:id="@+id/songDuration"
            style="@style/songOthersInfo"
            tools:text="@string/duration"/>

        <TextView
            android:id="@+id/songCategory"
            style="@style/songOthersInfo"
            android:visibility="invisible"
            tools:text="@string/song_category"/>
    </LinearLayout>

</LinearLayout>


